k8s/overlays/local/kafka-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
  namespace: ecommerce
spec:
  type: ExternalName
  externalName: host.docker.internal
