k8s/overlays/local/localstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  labels:
    app: localstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack:1.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4566
              name: edge

---
apiVersion: v1
kind: Service
metadata:
  name: localstack
  labels:
    app: localstack
spec:
  selector:
    app: localstack
  ports:
    - port: 4566
      targetPort: 4566
      protocol: TCP
      name: edge
